# ot-harjoitustyo

./: ..gitignore.swp  .coveragerc  .gitignore  README.md  backend.db  pyproject.toml  tasks.py  tasks.py.save
Dokumentaatio/: Testausdokumentti.md  Tyoaikakirjanpito.md  Vaatimuusmaarittely.md  arkkitehtuuri.md  changelog.md  kayttoohje.md
Verkkokauppa/: .pyproject.toml.swp  pyproject.toml  tasks.py  tuotteet.db
Verkkokauppa/Dokumentaatio/: Tyoaikakirjanpito.md  changelog.md
Verkkokauppa/src/: main.py  tuote.py  verkkokauppa.py
Verkkokauppa/src/repositories/: database.py
Verkkokauppa/src/services/: merchant.py
Verkkokauppa/src/tests/: merchant_test.py  tuote_test.py  verkkokauppa_test.py
laskarit/: README.md
laskarit/Merchant/: pyproject.toml  tasks.py
laskarit/Merchant/src/: main.py  merchant.py  tuote.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: kassapaate.py  maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: .Monopoli_kaavio.md.swp  Monopoli_kaavio.md
src/: main.py
src/entities/: tuote.py
src/repositories/: database.py
src/services/: merchant.py
src/ui/: asiakkaan_tui.py  asiakkaan_ui.py  kauppiaan_tui.py  kauppiaan_ui.py  tui.py  ui.py
