[tool.poetry]
name = "verkkokauppa"
version = "0.1.0"
description = "Verkkokauppa harjoitustyö"
authors = ["Yahia <yahimoh@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
