[tool.poetry]
name = "verkkokauppa"
version = "0.1.0"
description = "Verkkokauppa harjoitustyö"
authors = ["Yahia <yahimoh@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
